[package]
name = "diveno"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "A word game in Esperanto"
repository = "https://github.com/bpeel/diveno"

[lib]
crate-type = ["cdylib"]

[dependencies]
glow = "0.12.2"
nalgebra = "0.32.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target."cfg(not(target_arch = \"wasm32\"))".dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["image", "mixer"]

[target."cfg(target_arch = \"wasm32\")".dependencies.wasm_bindgen]
package = "wasm-bindgen"
version = "0.2.87"

[target."cfg(target_arch = \"wasm32\")".dependencies.web_sys]
package = "web-sys"
version = "0.3.64"
features = [
         "Element",
         "DomRect",
         "HtmlCanvasElement",
         "HtmlImageElement",
         "HtmlInputElement",
         "WebGlRenderingContext",
         "WebGlContextAttributes",
         "Window",
         "Performance",
         "Response",
         "console",
         "CssStyleDeclaration",
         "KeyboardEvent",
]

[target."cfg(target_arch = \"wasm32\")".dependencies.js_sys]
package = "js-sys"
version = "0.3.64"

[target."cfg(target_arch = \"wasm32\")".dependencies.console_error_panic_hook]
version = "0.1.7"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies.rand]
version = "0.8.5"
