[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "create-tile-texture"
path = "src/create_tile_texture.rs"

[[bin]]
name = "create-ball-texture"
path = "src/create_ball_texture.rs"

[[bin]]
name = "create-frame-image"
path = "src/create_frame_image.rs"

[[bin]]
name = "make-word-list"
path = "src/make_word_list.rs"

[[bin]]
name = "dump-word-list"
path = "src/dump_word_list.rs"

[dependencies.cairo-rs]
version = "0.17.10"
default-features = false
features = ["png", "svg"]
